# dark_sky_editor

./: .gitignore  Cargo.toml  texture_atlas.txt
assets/: texture_atlas.ron
dark_sky/: Cargo.toml
dark_sky/src/: camera.rs  collision_rays.rs  components.rs  equations_of_motion.rs  main.rs  main_2d_camera.rs  main_3d_camera.rs  main_menu.rs  material.rs  meshie_ship_test.rs  motion_test.rs  movement_debug copy.rs  movement_debug.rs  player_ship.rs  sectors.rs  starmap.rs
ds_eq_of_motion/: Cargo.toml
ds_eq_of_motion/src/: lib.rs
ds_euclid/: Cargo.toml
ds_euclid/src/: euclid_glam_converter.rs  lib.rs
ds_movement_debug/: Cargo.toml
ds_movement_debug/src/: lib.rs  systems.rs
ds_range/: Cargo.toml
ds_range/src/: lib.rs
main/: Cargo.toml  README.md
main/shaders/: forward.frag  star_frag_shader.frag
main/src/: camera.rs  main.rs  material.rs  mesh.rs  othercamera.rs  starscape.rs
main/src/bevy_lyon/: path.rs
mega_mesh/: Cargo.toml
mega_mesh/shaders/: frag_shader.frag
mega_mesh/src/: lib.rs  mega_mesh.rs  plugin.rs
meshie/: Cargo.toml
meshie/examples/: cube.rs  multi_mesh.rs  quad_add.rs
meshie/src/: generator.rs  lib.rs  types.rs
shaders/: debug_frag_shader.frag  forward simple.frag  forward.frag  forward.vert  frag_shader.frag  staryyyyyyyy.frag
skybox/: Cargo.toml
skybox/shaders/: frag_shader.frag
skybox/src/: lib.rs  plugin.rs  sky_sphere.rs
src/: camera.rs  dds_import.rs  main.rs  material.rs  mesh.rs  node_graph.rs  othercamera.rs  shapes.rs  texture_atlas.rs
src/bevy_lyon/: basic_shapes.rs  mod.rs
tools/image_tools/interpolate/: Cargo.toml
tools/image_tools/interpolate/src/: main.rs
