[package]
name = "dark_sky_editor"
version = "0.1.0"
authors = ["ifletsomeclaire <69061963+ifletsomeclaire@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "C:/Users/bad wife/Desktop/bevy" }
# lyon = "0.16.0"
noise = "*"
image = "0.23.9"