[package]
name = "dark_sky_editor"
version = "0.1.0"
authors = ["ifletsomeclaire <69061963+ifletsomeclaire@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "X:/Rust Projects/bevy" }
# lyon = "0.16.0"
noise = "*"
image = "0.23.9"
walkdir = "2"
serde = { version = "1.0.60", features = ["serde_derive"] }
ron = "*"
rand = "*"
dds-rs = "0.7.0"